Risolti problemi di avvio docker, convertito ItineraryMapper a MapStruct, abilitato Swagger senza token (profilo dev) e aggiunta gestione globale errori UUID e entità non trovate